--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ol-graticule-control",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "graticule control of openlayers 5",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,14 @@
     "prepublishOnly": "npm run build"
   },
   "repository": "gucheen/ol-graticule-control",
-  "keywords": ["ol", "openlayers", "graticule", "map", "control", "javascript"],
+  "keywords": [
+    "ol",
+    "openlayers",
+    "graticule",
+    "map",
+    "control",
+    "javascript"
+  ],
   "author": {
     "name": "Cheng Gu",
     "url": "https://www.guchengf.me"
